[gd_scene load_steps=8 format=3 uid="uid://cqaifcks6tp3x"]

[ext_resource type="Script" path="res://scenes/ui/menu_in_game.gd" id="1_lb6yv"]
[ext_resource type="Texture2D" uid="uid://cls30yg45jurd" path="res://assets/crafter.png" id="2_g6rjr"]
[ext_resource type="Texture2D" uid="uid://cq5bb75vmd3i6" path="res://assets/pipe.png" id="3_83p2j"]
[ext_resource type="Texture2D" uid="uid://caxosndx6vvgh" path="res://assets/trash_can.png" id="4_n8jwb"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hlkdv"]
bg_color = Color(0.0701524, 0.0701524, 0.0701524, 0.588235)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_3g0ge"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_vt3un"]

[node name="MenuInGame" type="MarginContainer"]
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 300.0
offset_bottom = 1.0
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_lb6yv")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 2
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_hlkdv")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_top = 50
theme_override_constants/margin_bottom = 50

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 50

[node name="DefaultButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
tooltip_text = "Select Mode"
mouse_default_cursor_shape = 2
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxEmpty_3g0ge")
theme_override_styles/hover = SubResource("StyleBoxEmpty_3g0ge")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_3g0ge")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_3g0ge")
theme_override_styles/focus = SubResource("StyleBoxEmpty_3g0ge")
text = "Select"

[node name="CrafterButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
tooltip_text = "Place new Crafter"
mouse_default_cursor_shape = 2
theme_override_constants/icon_max_width = 150
theme_override_styles/normal = SubResource("StyleBoxEmpty_3g0ge")
theme_override_styles/hover = SubResource("StyleBoxEmpty_3g0ge")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_3g0ge")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_3g0ge")
theme_override_styles/focus = SubResource("StyleBoxEmpty_3g0ge")
icon = ExtResource("2_g6rjr")

[node name="PipeButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
tooltip_text = "Place new Pipe"
mouse_default_cursor_shape = 2
theme_override_constants/icon_max_width = 75
theme_override_styles/normal = SubResource("StyleBoxEmpty_vt3un")
theme_override_styles/hover = SubResource("StyleBoxEmpty_3g0ge")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_3g0ge")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_3g0ge")
theme_override_styles/focus = SubResource("StyleBoxEmpty_3g0ge")
icon = ExtResource("3_83p2j")

[node name="TrashButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
tooltip_text = "Place new Trash Bin"
mouse_default_cursor_shape = 2
theme_override_constants/icon_max_width = 75
theme_override_styles/normal = SubResource("StyleBoxEmpty_vt3un")
theme_override_styles/hover = SubResource("StyleBoxEmpty_3g0ge")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_3g0ge")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_3g0ge")
theme_override_styles/focus = SubResource("StyleBoxEmpty_3g0ge")
icon = ExtResource("4_n8jwb")

[node name="DeleteButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
tooltip_text = "Remove Machine"
mouse_default_cursor_shape = 2
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxEmpty_3g0ge")
theme_override_styles/hover = SubResource("StyleBoxEmpty_3g0ge")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_3g0ge")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_3g0ge")
theme_override_styles/focus = SubResource("StyleBoxEmpty_3g0ge")
text = "X"

[connection signal="mouse_entered" from="PanelContainer/MarginContainer/VBoxContainer/DefaultButton" to="." method="_on_default_button_mouse_entered"]
[connection signal="mouse_exited" from="PanelContainer/MarginContainer/VBoxContainer/DefaultButton" to="." method="_on_default_button_mouse_exited"]
[connection signal="mouse_entered" from="PanelContainer/MarginContainer/VBoxContainer/CrafterButton" to="." method="_on_crafter_button_mouse_entered"]
[connection signal="mouse_exited" from="PanelContainer/MarginContainer/VBoxContainer/CrafterButton" to="." method="_on_crafter_button_mouse_exited"]
[connection signal="mouse_entered" from="PanelContainer/MarginContainer/VBoxContainer/PipeButton" to="." method="_on_pipe_button_mouse_entered"]
[connection signal="mouse_exited" from="PanelContainer/MarginContainer/VBoxContainer/PipeButton" to="." method="_on_pipe_button_mouse_exited"]
[connection signal="mouse_entered" from="PanelContainer/MarginContainer/VBoxContainer/TrashButton" to="." method="_on_trash_button_mouse_entered"]
[connection signal="mouse_exited" from="PanelContainer/MarginContainer/VBoxContainer/TrashButton" to="." method="_on_trash_button_mouse_exited"]
[connection signal="mouse_entered" from="PanelContainer/MarginContainer/VBoxContainer/DeleteButton" to="." method="_on_delete_button_mouse_entered"]
[connection signal="mouse_exited" from="PanelContainer/MarginContainer/VBoxContainer/DeleteButton" to="." method="_on_delete_button_mouse_exited"]
